# Periodic-Table-JSON

./: .gitignore  LICENSE  LICENSE.md  PeriodicTableCSV.csv  PeriodicTableJSON.json  README.md  periodic-table-lookup.json
periodic_table/: README.md  setup.cfg
periodic_table/generate/: element_template.py  generate_module.py  readme_template.py  table_template.py  testdef.py
periodic_table/src/periodic_table/: __init__.py  main.py  table.py  table_template.py
periodic_table/src/tests/: test_module.py
schemas/: periodicTableJSON.schema
scripts/: json_to_csv.py  specific_data.py  transform-lookup.js  validate_json.py
