[metadata]
name = periodic_table_dataclasses
version = attr: periodic_table.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
description = Python library of Periodic-Table-JSON 
long_description = file: README.md
long_description_content_type = text/markdown
license = CC BY-SA 3.0 
#url = https://github.com/Bowserinator/Periodic-Table-JSON
url = https://github.com/NMRbox/Periodic-Table-JSON 


classifier:
	License :: Other/Proprietary License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	periodic_table
install_requires =
	dataclasses_json

[options.entry_points]
console_scripts = 
	periodic_table = periodic_table.main:main 

[build_ext]
debug = 1

[options.package_data]
* = README.md

